BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Inventory_Order_vod__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Address Line 1 to which samples will be shipped to sampling users</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Address Line 2 to which samples will be shipped to sampling users</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By_vod__c</fullName>
        <description>Captures the name of the user approving the record, given that it may be different than the selected Approver User</description>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_vod__c</fullName>
        <description>Indicates the date on which the approval occurred.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this order has been approved.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_User_ID_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The approver for this record.</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Orders_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Carrier of the order shipment placed by sampling users</description>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Tracking_Number_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Carrier Tracking Number of the order placed by sampling users</description>
        <label>Carrier Tracking Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: City to which samples will be shipped to sampling users</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_BMS_EMEA__c</fullName>
        <description>VPRO EMEA July 2014: Custom field to support the ordering of Samples.</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority_BMS_EMEA__c</fullName>
        <description>VPRO EMEA July 2014: Custom field to support the ordering of Samples.</description>
        <label>Delivery Priority</label>
        <picklist>
            <picklistValues>
                <fullName>early morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof amb conf. 12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof amb conf.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof amb conf. Sat.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof Standard Ganztags bis 16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof Standard Vormittags bis 12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof Standard Samstags bis 16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof Vertraulichdienst Ganztags bis 16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof Vertraulichdienst Vormittags bis 12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tof Vertraulichdienst Samstag bis 16:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only, when order information might be integration with an external fulfillment system</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Create_Date_vod__c</fullName>
        <description>Date on which the order was created.</description>
        <label>Order Create Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_For_User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order For User is the user who is receiving the order.</description>
        <label>Order For User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders_For_User_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line_Status_BMS_SHARED__c</fullName>
        <label>Order Line Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Status_vod__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_approval_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipment in Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Received and Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Receipt Confirmation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Submit_Date_vod__c</fullName>
        <description>Date the order is submitted.</description>
        <label>Order Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Type_vod__c</fullName>
        <description>Indicates the type of order. Can be used to classify urgency, handling or any other customer need.</description>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Lookup_BMS_CORE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>JW 2013.05.13</description>
        <label>Owner_Lookup_BMS_CORE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory_Orders_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pic_Doc_Number_BMS_US__c</fullName>
        <label>Pic Doc Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Approval_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Number_BMS_SHARED__c</fullName>
        <label>SAP Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: SAP Number of the order placed by sampling users</description>
        <label>SAP Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Status_BMS_Shared__c</fullName>
        <label>SAP Order Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_BMS_CA__c</fullName>
        <label>Ship To</label>
        <picklist>
            <picklistValues>
                <fullName>Home Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage Locker Location</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_BMS_EMEA__c</fullName>
        <description>VPRO EMEA June 2014: created field for Europe. Existing CA cannot be reused as the default value of picklists cannot be changed. Default picklist values are conflicting on the VF page.</description>
        <label>Ship To</label>
        <picklist>
            <picklistValues>
                <fullName>Home Address</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipment_Date_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Shipment Date of the order placed by sampling users</description>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Instructions_BMS_EMEA__c</fullName>
        <description>VPRO EMEA July 2014: Custom field ot support the ordering of Samples.</description>
        <inlineHelpText>(including telephone number)</inlineHelpText>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: State to which samples will be shipped to sampling users</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Order_Fulfilled_Quantity_vod__c</fullName>
        <description>This field represents the sum of the fulfilled quantity from all order lines that match this user, product, and allocation record.</description>
        <label>Total Order Quantity</label>
        <summarizedField>Inventory_Order_Line_vod__c.Order_Fulfilled_Quantity_vod__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory_Order_Line_vod__c.Inventory_Order_Line_Status_vod__c</field>
            <operation>notEqual</operation>
            <value>New_vod</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inventory_Order_Line_vod__c.Inventory_Order_Line_Status_vod__c</field>
            <operation>notEqual</operation>
            <value>Saved_vod</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Inventory_Order_Line_vod__c.Inventory_Order_Line_Status_vod__c</field>
            <operation>notEqual</operation>
            <value>Canceled_vod</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory_Order_Line_vod__c.Inventory_Order_Header_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_Link_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Link to carrier shipment details based on the tracking number of the order placed by sampling users</description>
        <label>Tracking Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unlock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is updated to true on a submitted order, the order status will changed to &quot;Saved&quot; by the order trigger. Note that the value &quot;True&quot; is never actually saved in the unlock field. It is simply a way to unlock submitted calls. Normally only administrators will have field level security to the Unlock field.</description>
        <label>Unlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Source_Country_BMS_CORE__c</fullName>
        <formula>TEXT(Owner_Lookup_BMS_CORE__r.User_Source_Country_BMS_CORE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User_Source_Country_BMS_CORE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_BMS_SHARED__c</fullName>
        <description>VPRO - January 2013 - BMS Global Requirements &amp; Design: Zip code to which samples will be shipped to sampling users</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Inventory Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_For_User_vod__c</columns>
        <columns>Order_Status_vod__c</columns>
        <columns>Order_Submit_Date_vod__c</columns>
        <columns>Order_Type_vod__c</columns>
        <columns>SAP_Order_Number_BMS_SHARED__c</columns>
        <columns>Total_Order_Fulfilled_Quantity_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Owner_Lookup_BMS_CORE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Meine_Bestandsbestellung_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Order_Create_Date_vod__c</columns>
        <columns>Total_Order_Fulfilled_Quantity_vod__c</columns>
        <columns>Order_Status_vod__c</columns>
        <columns>Order_For_User_vod__c</columns>
        <filterScope>Mine</filterScope>
        <label>Meine Bestandsbestellung</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ATONC00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>DECVS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>DEIMM00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>DEONC00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>DEVIR00000000_BU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Inventory_Orders</fullName>
        <columns>NAME</columns>
        <columns>Order_Create_Date_vod__c</columns>
        <columns>Total_Order_Fulfilled_Quantity_vod__c</columns>
        <columns>Order_Status_vod__c</columns>
        <columns>Order_For_User_vod__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Inventory Orders</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BECVS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>BEONC00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>BEPAI00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>BEVIM00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>ESCVS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>ESONC00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>ESVIM00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>ITCVS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>NLSLS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>PLCVS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>PLHCS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>ROCVS00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>ROONC00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>ROVIM00000000_BU</roleAndSubordinates>
            <roleAndSubordinates>TR00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>POSMP{0000000}</displayFormat>
        <label>Inventory Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Orders</pluralLabel>
    <recordTypes>
        <fullName>Inventory_Order_Canada</fullName>
        <active>true</active>
        <description>Used for Canada Profiles</description>
        <label>Inventory Order Canada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Order_EMEA</fullName>
        <active>true</active>
        <description>VPRO EMEA June 2014: created for Europe</description>
        <label>Inventory Order - EMEA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_State_Not_Blank</fullName>
        <active>true</active>
        <description>BMS ACN - Q4 GRM 2016 - Validation to force the users to select a State while submitting Inventory Orders.</description>
        <errorConditionFormula>AND ( RecordType.DeveloperName = &apos;Inventory_Order_EMEA&apos; , ISBLANK( TEXT( State_BMS_SHARED__c ) ) )</errorConditionFormula>
        <errorDisplayField>State_BMS_SHARED__c</errorDisplayField>
        <errorMessage>Error: You must enter a value (State)</errorMessage>
    </validationRules>
</CustomObject>